[package]
name = "stratum_ping"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = {version="3.1.0", features=["derive"]}
native-tls = "0.2.8"
serde = {version="1.0.136", features = ["derive"] }
serde_json = "1.0.79"

[profile.release]
codegen-units = 1
debug = false
incremental = true
lto = true
