[package]
categories = ["command-line-utilities"]
description = "Measuring round-trip delay time (RTD) using the Stratum protocol."
edition = "2021"
homepage = "https://github.com/mayhemdot/stratum_ping"
keywords = ["stratum", "latency", "RTD", "RTT", "delay"]
license = "MIT"
name = "stratum_ping"
repository = "https://github.com/mayhemdot/stratum_ping"
version = "0.1.0"

[dependencies]
clap = {version = "3.1.6", features = ["derive"]}
env_logger = "0.9.0"
log = "0.4.16"
miniserde = "0.1.24"
native-tls = "0.2.8"

[profile.release]
codegen-units = 1
debug = false
incremental = true
lto = true
